feat(config): refactor configuration management to utilize environment variables
- Removed hardcoded configuration files in favor of environment variable placeholders in TOML files.
- Updated Dockerfiles to copy the .env file for variable substitution during builds.
- Enhanced the loader to read and substitute variables from the .env file, improving flexibility and security in configuration management.
- Cleaned up .gitignore and .cursorignore to reflect the new configuration strategy.

--- a/.cursorignore
+++ b/.cursorignore
@@ -127,16 +127,10 @@ data/**/*.sql
 **/*.pb.go
 **/*.pb.gw.go
 
-## Config files (use example files instead)
-dev.toml
-prod.toml
-inputs/**/config/*.toml
-inputs/**/config/*.yaml
-inputs/**/config/*.yml
-!inputs/**/config/example.toml
-!inputs/**/config/example.yaml
-!inputs/**/config/example.yml
-
 ## Console build
 /console/dist/
 /console/node_modules/
+
+!.env.example
+!.example.env
+!.env
