feat(profile): enhance navigation and form handling in ProfilePage
- Added new navigation events for profile-related actions, including navigating to profile, editing profile, and managing security settings.
- Refactored UserEducationsCard and UserOccupationsCard components to utilize new event emitters for editing education and occupation entries.
- Implemented memoization in form schemas to optimize performance and prevent unnecessary re-renders.
- Updated Taskfile.yml to include new commands for managing the development environment and building services.
- Improved code organization and readability across various components, enhancing maintainability.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -176,19 +176,29 @@ tasks:
           nfx-identity
     silent: false
 
-  build:
-    desc: "Build all services"
-    cmds:
-      - go build -o bin/auth-api inputs/auth/api/main.go
-      - go build -o bin/auth-worker inputs/auth/worker/main.go
-
-  test:
-    desc: "Run tests"
-    cmds:
-      - go test ./...
-
   clean:
     desc: "Clean build artifacts"
     cmds:
       - rm -rf bin/
 
+  console:
+    desc: "Run console dev server"
+    dir: console
+    cmds:
+      - npm run dev
+
+  console:i:
+    desc: "Install console dependencies"
+    dir: console
+    cmds:
+      - npm install
+  
+  go:ub:
+    desc: "Up go dev server and build"
+    cmds:
+      - sudo docker compose -f docker-compose.dev.yml up --build
+
+  go:up:
+    desc: "Up go dev server"
+    cmds:
+      - sudo docker compose -f docker-compose.dev.yml up
