feat(image): implement image management features including upload, move, and delete operations
- Added MoveImage and DeleteImage methods to ImageClient for managing image lifecycle.
- Implemented UploadImage function for uploading images to a temporary directory.
- Enhanced ProfilePage to display user images and integrated image upload functionality.
- Updated routing and API definitions to support new image management endpoints.
- Refactored related components and hooks to improve user experience and maintainability.

--- a/inputs/image/configuration/dev.toml
+++ b/inputs/image/configuration/dev.toml
@@ -87,6 +87,8 @@
     [kafka.consumer_topics]
         image = "nfxid.image"
         image_poison = "nfxid.image_poison"
+        directory = "nfxid.directory"
+        directory_poison = "nfxid.directory_poison"
 
     [kafka.security]
         enabled = false
