feat(cachex): introduce cachex package for enhanced caching capabilities
- Added a new cachex package to provide advanced caching functionalities, including entity, list, index, and counter caches.
- Implemented a flexible configuration system for cache settings, allowing for TTL, negative caching, and jitter options.
- Refactored existing cache references to utilize the new cachex package across various modules, ensuring consistency and improved performance.
- Updated import paths and adjusted related components to accommodate the new caching structure.
- Enhanced Redis connection management with health checks and retry mechanisms for improved reliability.

--- a/.cursorignore
+++ b/.cursorignore
@@ -134,3 +134,9 @@ data/**/*.sql
 !.env.example
 !.example.env
 !.env
+
+## 确保 pkgs 及其子目录（含 cache）不被忽略
+!pkgs/
+!pkgs/**
+!pkgs/cache/
+!pkgs/cache/**
